# omega-match

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  RELEASE.md  perf_plot.gp  perf_test.py
.github/workflows/: ci.yml  cmake-multi-platform.yml  olm-rust.yml  release.yml
bindings/python/: .bandit  .flake8  .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  app_test.py  conftest.py  olm.py  pyproject.toml  pytest.ini  setup.cfg  setup.py
bindings/python/omega_match/: __init__.py  omega_match.py
bindings/python/tests/: test_omega_match.py
bindings/rust/: Cargo.toml  build.rs  init.sh
bindings/rust/src/: lib.rs
bindings/rust/src/compiler/: mod.rs  opts.rs  patterns.rs  stats.rs
bindings/rust/src/config/: mod.rs  modes.rs  modifiers.rs
bindings/rust/src/dispatch/: mod.rs
bindings/rust/src/io/: mod.rs
bindings/rust/src/matcher/: mod.rs  modifiers.rs  params.rs  results.rs  stats.rs
cmake/: omega_matchConfig.cmake.in
data/: expected_line_end.txt  expected_line_exact_match.txt  expected_line_start_word_boundary.txt  expected_word_prefix.txt  expected_word_suffix.txt  grep_found-ci-wb.txt  grep_found-wb.txt  grep_found-word.txt  grep_found.txt  haystack_email.txt  line_anchor_haystack.txt  line_anchor_patterns.txt  line_exact_haystack.txt  line_exact_match_haystack.txt  line_exact_match_patterns.txt  matcher_found-longest-no_overlap-wb-ci-ip-ew.txt  matcher_found.txt  names.txt  punct_haystack.txt  small_pats.txt  surnames_us_census.txt  tlds.txt  usernames.txt
examples/: python_binding_demo.py  python_pgo_demo.py
examples/rust/: Cargo.toml
examples/rust/omega-match-rust/: Cargo.toml  README.md  build.rs
examples/rust/omega-match-rust/src/: main.rs
examples/rust/src/: cli.rs  main.rs  opts.rs
omega_match/: getopt_win.c  getopt_win.h  main.c
omega_match/include/omega/: list_matcher.h
omega_match/include/omega/details/: attr.h  bloom.h  common.h  dedupe_set.h  hash.h  hash_table.h  match_vector.h  pattern_store.h  transform_table.h  util.h  version.h.in
omega_match/src/: bloom.c  common.c  compiler.c  dedupe_set.c  hash_table.c  matcher.c  pattern_store.c  pattern_store_append.c  transform_table.c  util.c  version.c
scripts/: README_PGO.md  btn_harvest.py  btn_parse.py  compare_pgo_performance.py  pgo_workflow.py
tests/: aio.py  aio_line_end.py  aio_line_exact_match.py  aio_line_start.py  aio_line_start_wb.py  aio_longest_no_overlap.py  aio_longest_no_overlap_ci.py  aio_longest_no_overlap_ci_wb.py  aio_longest_no_overlap_wb.py  aio_wp.py  aio_ws.py  compile_match.py  omega_test.py
