[metadata]
name = omega_match
version = 0.1.0
description = High-performance multi-string matcher with native C backend
author = Davin Shearer
author_email = scholarsmate@gmail.com
license = Apache 2.0
url = https://github.com/scholarsmate/omega-match
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find_namespace:
include_package_data = True
python_requires = >=3.9
install_requires =
    argcomplete>=3.6.2
    cffi>=1.15.1

[options.package_data]
omega_match = native/lib/*
